k8s/apps/leachnet/ln-home/homebridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge
spec:
  ports:
  - name: http
    port: 8581
    targetPort: http
  selector:
    app: homebridge
